# visualization.vortex

./: .gitignore  CMakeLists.txt  appveyor.yml  azure-pipelines.yml
depends/windows/kodi-platform/: kodi-platform.txt
depends/windows/platform/: 0001-win-replace-asm-with-intrinsics.patch
src/: VortexXBMC.cpp
src/angelscript/add_on/: scriptstring.cpp
src/angelscript/source/: as_atomic.cpp  as_compiler.cpp  as_restore.cpp
src/core/: DirectXHelpers.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vortex.cpp  Vortex.h
src/effects/: Map.cpp  Tunnel.cpp  VoicePrint.cpp
visualization.vortex/: addon.xml  addon.xml.in
